feat: add filter range date for transaction
- add created_at and updated_at in resources
- fix timestamp for transaction items creation
